tdf#148142 chart: fix export of modified On/Between tick marks

Reset the MajorOrigin property after import to avoid
of the bad export of the modified document, which reset
the original On tick marks/Between tick marks value.

Follow-up to commit 40d83914d43f60a196dfabddea0b52e2046b333a
"tdf#127792 implement UNO chart attribute MajorOrigin".

Change-Id: I0e3915b7d1b601abd40fbd1ba9d01fc05a8fb7c1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151885
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152009
Tested-by: Jenkins